--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.ssl.key-store-password = test1234
 server.ssl.keyStoreType = PKCS12
 server.ssl.keyAlias = tomcat
 security.user.password = password
+zuul.routes.resource.path = /resource/**
+zuul.routes.resource.url = https://localhost:9000
